--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import-normalize;
+
+html, body, main {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
